--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
-    "hardhat": "^2.12.7"
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "hardhat": "^2.12.7",
+    "web3": "^1.8.2"
   },
   "dependencies": {
     "bip-schnorr": "^0.6.6"
