--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "web3": "^1.8.2"
   },
   "dependencies": {
-    "bip-schnorr": "^0.6.6"
+    "bip-schnorr": "^0.6.6",
+    "crypto": "^1.0.1",
+    "secp256k1": "^5.0.0"
   }
 }
